UtahLiveDataTest/src/objects/AwardBudgetCategory__c.object
<CustomObject>
    <description>[Business] Defines the Budget categories on the Award</description>
    <fields>
        <fullName>Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminCostValueProposed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AdminCostValueProposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminCostValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AdminCostValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminPendingPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Pending Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminRemainingBudget__c</fullName>
        <formula>AdminCostValue__c - AdminYTDReimbursementPaid__c - AdminPendingPayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminYTDReimbursementPaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin YTD Reimbursement Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardFundingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Funding Account</label>
        <referenceTo>AwardFundingAccount__c</referenceTo>
        <relationshipLabel>Award Budget Categories</relationshipLabel>
        <relationshipName>Award_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Service Area</label>
        <referenceTo>AwardServiceArea__c</referenceTo>
        <relationshipLabel>Award Budget Categories (Award Service Area)</relationshipLabel>
        <relationshipName>Award_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Award Budget Categories</relationshipLabel>
        <relationshipName>Award_Budget_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BudgetCategoryName__c</fullName>
        <formula>BudgetCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Award Budget Categories</relationshipLabel>
        <relationshipName>Award_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>Award Budget Categories</relationshipLabel>
        <relationshipName>Award_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetRevisionInitiated__c</fullName>
        <label>BudgetRevisionInitiated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CashMatchExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Match Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashMatchRemaining__c</fullName>
        <formula>CashMatch__c - CashMatchExpenditure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Match Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashMatch__c</fullName>
        <description>This field gets populated in AwardTriggerHelper</description>
        <label>CashMatch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CategoryDetails__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClonedFromApplicationBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClonedFromApplicationBudgetCategory</label>
        <referenceTo>ApplicationBudgetCategory2__c</referenceTo>
        <relationshipLabel>Award Budget Categories</relationshipLabel>
        <relationshipName>Award_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentApprovedBudgetAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CurrentApprovedBudgetAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DisallowedAmount__c</fullName>
        <label>Disallowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FederalRemaining__c</fullName>
        <formula>IF(Award__r.GrantorOrganization__c == &apos;UOVC&apos;, (Federal__c - YTDReimbursementPaid__c - PendingPayment__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal__c</fullName>
        <description>This field gets it value from Applicationbudgetcategory in awardTrigger helper.</description>
        <label>Federal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Award Budget Categories</relationshipLabel>
        <relationshipName>Award_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Budget Category</label>
        <referenceTo>GrantBudgetCategory__c</referenceTo>
        <relationshipLabel>Award Budget Categories</relationshipLabel>
        <relationshipName>AwardBudgetCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantID__c</fullName>
        <formula>Award__r.Grant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Project Area</label>
        <referenceTo>GrantServiceArea__c</referenceTo>
        <relationshipLabel>Award Budget Categories</relationshipLabel>
        <relationshipName>Award_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteeAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Grantee Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeShare__c</fullName>
        <formula>If(Amount__c&lt;=0, 0, GranteeAmount__c / Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrantorAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Grantor Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HideAddLineItem__c</fullName>
        <formula>BudgetCategory__r.Name = &apos;Indirect Costs&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAddLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetFormBreakdownButton__c</fullName>
        <formula>IF(BudgetCategory__r.RowNumber__c == &apos;570&apos;, FALSE, TRUE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBudgetFormBreakdownButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetFormEditButton__c</fullName>
        <formula>IF(
OR(
AND(Award__r.ProgramBudgetTypeUSBE__c != &apos;CTE&apos;,OR(RowNumberFormula__c == &apos;570&apos;, 
RowNumberFormula__c == &apos;599&apos;)),
AND(Award__r.ProgramBudgetTypeUSBE__c == &apos;CTE&apos;,OR(RowNumberFormula__c == &apos;570&apos;,RowNumberFormula__c == &apos;599&apos;)))
, TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBudgetFormEditButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBuildUp__c</fullName>
        <formula>ISPICKVAL(Award__r.Grant__r.Program__r.BuildupFunctionalityNeeded__c,&apos;No&apos;)</formula>
        <label>Hide Build Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBuildupGrid__c</fullName>
        <description>Hide Buildup Grid Logic</description>
        <formula>Award__r.HideBuildupGrid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hide Buildup Grid Logic</inlineHelpText>
        <label>Hide Buildup Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDeleteInFinancials__c</fullName>
        <formula>OR(TEXT(Award__r.Status__c) = &apos;Activated&apos;,TEXT(Award__r.Status__c) = &apos;Being Amended&apos;,TEXT(Award__r.Status__c) = &apos;Amended/Closed&apos;)</formula>
        <label>HideEditDeleteInFinancials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfNotBuildupBudgetCategory__c</fullName>
        <formula>IF(BudgetCategory__r.RowNumber__c != &apos;570&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide If Not Buildup Budget Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewBuildupBtn__c</fullName>
        <description>Logic for Hiding New Buildup Popup</description>
        <formula>Award__r.HideNewBtn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding New Buildup Popup</inlineHelpText>
        <label>Hide New Buildup Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideWhileBudgetRevision__c</fullName>
        <formula>OR(Award__r.CurrentRevisionStatus__c == &apos;Not Started&apos;, Award__r.CurrentRevisionStatus__c == &apos;Active&apos;, Award__r.CurrentRevisionStatus__c == null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide While Budget Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InKindExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>In Kind Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InKindRemaining__c</fullName>
        <formula>InKind__c - InKindExpenditure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Kind Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InKind__c</fullName>
        <description>This field gets populated in AwardTriggerHelper</description>
        <label>InKind</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastGrantorApprovedAdminCost__c</fullName>
        <label>LastGrantorApprovedAdminCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastGrantorApprovedAdminPlusBudget__c</fullName>
        <formula>LastGrantorApprovedAdminCost__c +  LastGrantorApprovedBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastGrantorApprovedAdminPlusBudget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastGrantorApprovedBudget__c</fullName>
        <label>LastGrantorApprovedBudget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastGrantorApprovedTotalCTE__c</fullName>
        <formula>LastGrantorApprovedAdminCost__c +  LastGrantorApprovedBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastGrantorApprovedTotalCTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberofProjectsAreas__c</fullName>
        <formula>TEXT( Award__r.Grant__r.NumberofProjectAreas__c )</formula>
        <label>Number of Projects Areas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pending Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PercentVarianceAdmin__c</fullName>
        <formula>IF(LastGrantorApprovedAdminCost__c != 0, ( AdminCostValueProposed__c - LastGrantorApprovedAdminCost__c)/ LastGrantorApprovedAdminCost__c, IF(AdminCostValueProposed__c!= 0, 1000000000000, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PercentVarianceAdmin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentVariancePrevious__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <label>PercentVariancePrevious</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentVarianceText__c</fullName>
        <formula>IF(CurrentApprovedBudgetAmount__c != 0,  TEXT(ROUND(PercentVariance__c * 100, 2)) + &quot;%&quot;, IF(ProposedBudgetRevision__c != 0, &quot;Budget Added&quot;, TEXT(0)+&quot;%&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PercentVarianceText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentVariance__c</fullName>
        <description>Percent Variance = ( x - y ) / y WHERE x=proposed revision, y=current approved budget</description>
        <formula>IF(Award__r.ProgramBudgetTypeUSBE__c = &apos;CTE&apos;, 
IF(LastGrantorApprovedTotalCTE__c != 0, ( ProjectBudgetPlusAdminCostProposed__c  - LastGrantorApprovedTotalCTE__c)/ LastGrantorApprovedTotalCTE__c, IF(ProjectBudgetPlusAdminCostProposed__c   != 0, 1000000000000, 0))
,
IF(LastGrantorApprovedBudget__c != 0, ( ProposedBudgetRevision__c - LastGrantorApprovedBudget__c )/ LastGrantorApprovedBudget__c, IF(ProposedBudgetRevision__c != 0, 1000000000000, 0))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PercentVariance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProjectBudgetPlusAdminCostProposed__c</fullName>
        <formula>AdminCostValueProposed__c +  ProposedBudgetRevision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectBudgetPlusAdminCostProposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectBudgetPlusAdminCost__c</fullName>
        <formula>AdminCostValue__c +  CurrentApprovedBudgetAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectBudgetPlusAdminCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProposedBudgetRevision__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ProposedBudgetRevision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemainingAmount__c</fullName>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemainingBudget__c</fullName>
        <formula>CurrentApprovedBudgetAmount__c - YTDReimbursementPaid__c - PendingPayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RowNumberFormula__c</fullName>
        <formula>BudgetCategory__r.RowNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <label>Row Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceAreaName__c</fullName>
        <formula>GrantServiceArea__r.ServiceArea__r.Title__c</formula>
        <label>Service Area Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipLabel>Award Budget Categories</relationshipLabel>
        <relationshipName>AwardBudgetCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Award__r.Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SumAmount__c</fullName>
        <formula>Adjustment__c +Amount1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>Federal__c+InKind__c+CashMatch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPendingPayment__c</fullName>
        <formula>PendingPayment__c + AdminPendingPayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pending Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRemainingBudget__c</fullName>
        <formula>ProjectBudgetPlusAdminCost__c - TotalYTDReimbursementPaid__c - TotalPendingPayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalYTDReimbursementPaid__c</fullName>
        <formula>YTDReimbursementPaid__c + AdminYTDReimbursementPaid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total YTD Reimbursement Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(BudgetCategory__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaivedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Waived Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDAdvanceApplied__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>YTD Advance Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDAdvanceAvailable__c</fullName>
        <formula>YTDAdvancePaid__c - YTDAdvanceApplied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Advance Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDAdvancePaid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>YTD Advance Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDReimbursementAvailable__c</fullName>
        <formula>GrantorAmount__c - (YTDReimbursementPaid__c +YTDAdvancePaid__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Reimbursement Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDReimbursementPaid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>YTD Reimbursement Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Award Budget Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{00}</displayFormat>
        <label>Award Budget Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Budget Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AmountLessThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>SumAmount__c &lt; 0</errorConditionFormula>
        <errorMessage>The total amount cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CashMatchBudgetLessThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>CashMatchRemaining__c&lt;0</errorConditionFormula>
        <errorMessage>The remaining cash match budget cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EditAfterSubmission</fullName>
        <active>true</active>
        <description>AND(
  ggsDemo__Award__r.ggsDemo__ReadOnly__c,
  NOT(AND(
    ISPICKVAL(ggsDemo__Award__r.ggsDemo__Status__c, &apos;Sub-Awardee Review&apos;),
    $Profile.Name = &apos;Project Admin&apos;
  ))
)</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>You cannot edit the budget of this award.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FederalRemainingLessThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>FederalRemaining__c&lt;0</errorConditionFormula>
        <errorMessage>The remaining budget cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InKindRemainingLessThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>InKindRemaining__c&lt;0</errorConditionFormula>
        <errorMessage>The remaining in kind budget cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RemainingBudgetLessThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>RemainingBudget__c&lt;0</errorConditionFormula>
        <errorMessage>The remaining budget cannot be less than zero.</errorMessage>
    </validationRules>
</CustomObject>